--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^4.1.0",
-    "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -24,6 +23,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.14",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
